--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
       
     <div class="projects-cta">
-      <a href="https://github.com/shreshth-tyagi"><button>View More on GitHub</button></a>
+      <a href="https://github.com/Shreshth-1"><button>View More on GitHub</button></a>
     </div>
   </section>
 
