--- a/index.html
+++ b/index.html
@@ -180,6 +180,16 @@
           <span class="tag">Python Image Library</span>
         </div>
       </div>
+
+      <div class="project-card">
+        <img src="https://github.com/Shreshth-1/Pixel-Smash/blob/main/pixelSmashLogo.png?raw=true" alt="Pixel-Smash">
+        <h3>Pixel-Smash</h3>
+        <p>A classic 2 player ping-pong game</p>
+        <div class="tags">
+          <span class="tag">Processing</span>
+        </div>
+      </div>
+      
     </div>
       
     <div class="projects-cta">
